plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom 'software.amazon.awssdk:bom:2.25.11'
	}
}

dependencies {
	runtimeOnly "com.mysql:mysql-connector-j:8.4.0"
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// WebSocket 테스트를 위한 의존성
	testImplementation 'org.springframework:spring-websocket'
	testImplementation 'org.springframework:spring-messaging'
	testImplementation 'org.springframework.security:spring-security-test'

	// AWS S3 의존성 (BOM으로 버전 관리)
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:auth'

	// WebSocket & STOMP 의존성
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
}

tasks.named('test') {
	useJUnitPlatform()
}
